--- a/src/scss/blocks/_features.scss
+++ b/src/scss/blocks/_features.scss
@@ -69,10 +69,10 @@
 // Далее в @keyframes указываем что в конечной точке анимации (100%) - наше смещение должно полностью исчезнуть (стать = 0) (Если же stroke-dashoffset при 100% будет отличен от 0, то анимация будет заканчиваться не конечной точке.
 
 .svg-anim-line {
-	background-color: blue;
+	background-color: #fff;
 	path {
 		stroke-width: 10px;
-		stroke: #fff;
+		stroke: red;
 
 		// Атрибут определяющий вид пунктирной линии, используемый для рисования контура svg-элемента
 		stroke-dasharray: 17826;
