--- a/src/scss/blocks/_glich2.scss
+++ b/src/scss/blocks/_glich2.scss
@@ -16,41 +16,51 @@
 		content: '';
 		position: absolute;
 		width: 301px;
-		height: 23.6px;
+		height: 30px;
 		background: url('../../img/main/menu/dish-6.png') no-repeat;
 		background-size: cover;
 		filter: sepia(80%);
 		opacity: 0;
 	}
 	&:hover::before {
-		opacity: 0.7;
-		animation: glitch 2s linear infinite ;
+		opacity: 0.8;
+		animation: glitch 1s linear infinite ;
 	}
 }
 @keyframes glitch {
 	0%{
 		top:0;
-		background-position: 20px 0;
+		background-position: 0px 0;
 
 	}
 	20%{
 		top:80px;
-		background-position: 20px -80px;
+		background-position: 50px -80px;
 
 	}
 	40%{
-		top:0;
-		background-position: 20px 0;
+		top:120px;
+		background-position: -20px -160px;
+
+	}
+	50%{
+		top:125px;
+		background-position: 0px -165px;
+
+	}
+	60%{
+		top:130px;
+		background-position: 0px -130px;
 
 	}
 	80%{
-		top:0;
-		background-position: 20px 0;
+		top:180px;
+		background-position: 20px -200px;
 
 	}
 	100%{
-		top:0;
-		background-position: 20px 0;
+		top:236px;
+		background-position: 20px -220px;
 
 	}
 }
